--- a/Array problem set/arrayprobset.html
+++ b/Array problem set/arrayprobset.html
@@ -8,10 +8,10 @@
 <body>
     <h2>it's a array problem set</h2>
     <ol>
-        <li>printReverse()</li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>printReverse():- to reverse the array</li>
+        <li>isUniform():- return true if all the arguments are identical</li>
+        <li>sumArray():- sum of all numbers in the array</li>
+        <li>max():- show the max value from the array</li>
     </ol>
 </body>
 <script src="solU.js"></script>
