--- a/Age calculator/age.html
+++ b/Age calculator/age.html
@@ -11,6 +11,6 @@
    It  calculate the no of Days you lived
 
 
-   #see the output in console
+   #see the output in console screen(cntrl+shift+i) 
 </body>
 </html>
