--- a/scorekeeper/index.html
+++ b/scorekeeper/index.html
@@ -1,20 +1,25 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Score keeper</title>
+    <link rel="stylesheet" href="scorekeeper.css">
+    <title>Score Keeper</title>
+
 </head>
 
 <body>
-    <h1><span id="p1d">0</span> to <span id="p2d">0</span></h1>
-    <p>Playing to: </p>
-    <input type="number" value="">
-    <button id="p1">Player One</button>
-    <button id="p2">Player Two</button>
-    <button id="reset">REset</button>
+    <h1><span id="playerone">0</span> to <span id="playertwo">0</span></h1>
+    <p>playing to:<span id="playing">5</span></p>
+    <input type="number">
+    <button id="p1">player one</button>
+    <button id="p2">player two</button>
+    <button id=reset>Reset</button>
+
 </body>
-<link rel="stylesheet" href="scorekeeper.js">
+<script src="scorekeeper.js"></script>
+
 
 </html>
