--- a/index.html
+++ b/index.html
@@ -2,64 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Invoice</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css" media="all" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ankit Rai || Web developer</title>
 </head>
 
 <body>
-    <header class="clearfix">
-        <div id="lo">
+    <h1>Ankit Rai</h1>
+    <p>Male,21 years<br><b>E</b>mail id:ankit.rai@suiit.ac.in<br> Mob: 9348937988</p>
+    <section id="EDUCATIONAL QUALIFICATIONS">
+        <h2>EDUCATIONAL QUALIFICATIONS</h2>
+        <ul>
+            <li>B.Tech CSE :- Smbalpur University Institute of Information Technology,Burla &nbsp; 6.5/10 &nbsp;2018</li>
+            <li>Major coures :- Mathmatics-4,Computer organisation and architecture,Operating Systems,
+                <br>&emsp; &emsp; &emsp; &emsp; &ensp;Data Base Management system,Theory of computing
+            </li>
+            <li>Class XII :- Fakir Mohan Junior College,Balasore,CHSE &nbsp; 65% &nbsp; 2016</li>
+            <li>class X :- DAV Public School,Balasore,CBSE &nbsp; 81% &nbsp; 2014</li>
+        </ul>
 
-        </div>
+    </section>
+    <section id="ACADEMIC ACHIEVEMENTS">
+        <h2>ACADEMIC ACHIEVEMENTS</h2>
+        <ul>
+            <li>Secured first position in batch of 2010, DAV Public School </li>
+            <li>Awarded ABC Scholarship for outstanding performance in 12th examination</li>
+            <li>Axwarded for excellence in National Mathematics Olympiad, ABC School</li>
+        </ul>
 
-        <div id="company" class="clearfix">
-            <div><b>Bill to:</b></div>
-            <div>Slate Rock and Gravel Company</div>
-            <div>222 Rock Way</div>
-            <div>3000 Bedrock,<br />Cobblestone Country</div>
-            <div>+555 7 123-5555</div>
-            <div>fred@slaterockgravel.bed</div>
-            <div>Attn:Fre Flinstone</div>
-        </div>
-        <div id="project">
-            <div><span>Issue Date:</span>3/12/2019</div>
-            <div><span>Due Date:</span>4/02/2019</div>
-            <div><span>Net:</span>21</div>
-            <div><span>Currency:</span>USD</div>
-            <div><span>P.O.#</span>1/3-147</div>
+    </section>
 
-        </div>
-    </header>
-    <main>
-        <table>
-            <thead>
-                <tr>
-                    <th class="service">item</th>
-                    <th class="desc">Quantity</th>
-                    <th>Price</th>
-                    <th>GST</th>
-                    <th>total</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="service">Design</td>
-                    <td class="desc">2</td>
-                    <td>120</td>
-                    <td>2%</td>
-                    <td><span>&#8377;</span>240.00</td>
-                </tr>
+    <section id="INTERNSHIPS">
+        <h2>INTERNSHIPS</h2>
+        <h3>Company name,Location &emsp; &emsp; &emsp; Project title</h3>
+        <ul>
+            <Li>Desighned a "Wedding Planner" Website for BuilderIndia.com </Li>
+            <Li>Desighned a "Catering " Wbsite for BuilderIndia.com</Li>
+        </ul>
+    </section>
 
-            </tbody>
-        </table>
-        <div class="notices">
-            <div><span id="to">TOTAL:</span><span>&#8377;</span>244.80</div>
-        </div>
-    </main>
-    <button type="button" class="btn btn-default d-print-none" id="print" onclick="window.print() ">Print</button>
+    <section id="PROJECTS & RESEARCH PAPERS">
+        <h2>Title of academic project 1 (academic project 1)</h2>
+        <li>Developed a website "Educature" which is similar to career360.com</li>
+        <li>Desighned a website of "Datsme"</li>
+
+        <h2>Title of Research paper 1 (Research paper 1)</h2>
+        <li>Researched and provided explanation for an xyz concept through primary and secondary research</li>
+        <li>Developed hypothesis and tested them against the prevalent notions in the industry regarding a particular concept</li>
+
+    </section>
+
+    <section id="TECHNICAL SKILLS">
+        <h1>TECHNICAL SKILLS</h1>
+        <h2>Programming skills</h2>
+        <li></li>
+
+        <h2>Software skills</h2>
+        <li></li>
+
+    </section>
 </body>
 
 </html>
