--- a/Stalker.html
+++ b/Stalker.html
@@ -5,7 +5,7 @@
     <title>Stalker Exercise</title>
 </head>
 <body>
-    <h1>JS Stalker Exercise</h1>
+    <h1>JS StAlKer Exercise</h1>
     <p>Variable,Strings,Prompt and console.log</p>
     <ul>
         <li>Ask for user's first name</li>
