--- a/Color game/index.html
+++ b/Color game/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
-    <div class="square"></div>
+    <h1>RGB color guessing game</h1>
+    <div id="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
 </body>
+
 
 </html>
