--- a/Color game/index.html
+++ b/Color game/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
+
     <title>Color Game</title>
 </head>
 
 <body>
-    <h1>RGB color guessing game</h1>
+    <h1><span id="colorDisplay">RGB</span> color guessing game</h1>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
@@ -19,7 +20,9 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
+
 </body>
 
+<script src="index.js"></script>
 
 </html>
