--- a/Color game/index.html
+++ b/Color game/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <h1><span id="colorDisplay">RGB</span> color guessing game</h1>
+    <div><span id="message">  </span>
+
+    </div>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
