--- a/Color game/index.html
+++ b/Color game/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1><span id="colorDisplay">RGB</span> color guessing game</h1>
+    <h1><span id="colorDisplay">RGb</span> color guessing game</h1>
     <div><span id="message">  </span>
 
     </div>
