--- a/Color game/index.html
+++ b/Color game/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <h1><span id="colorDisplay">RGB</span> color guessing game</h1>
+    <h1>the
+        <br><span id="colorDisplay">RGB</span><br> color guessing game
+    </h1>
 
     <div id="stripe">
         <button id="reset">New Colors</button>
