--- a/Color game/index.html
+++ b/Color game/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css">
 
-    <title>Color Game</title>
+    <title>Color Guessing Game</title>
 </head>
 
 <body>
