--- a/Color game/index.html
+++ b/Color game/index.html
@@ -18,8 +18,8 @@
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
-        <button id="easybtn">Easy</button>
-        <button id="hardbtn" class="select">Hard</button>
+        <button class="mode">Easy</button>
+        <button class="mode selected" class="select">Hard</button>
     </div>
 
     <div id="container">
