--- a/function problem set/prob.html
+++ b/function problem set/prob.html
@@ -4,7 +4,7 @@
     <script src="Sol.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Function problem</title>
+    <title>Function Problem</title>
 </head>
 <body>
     <p>write functions for the following:</p>
