--- a/Age calculator/age.html
+++ b/Age calculator/age.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="age.js"></script>
-    <title>Age Calculator</title>
+    <title>Age CalCulator</title>
 </head>
 <body>
     <h2>Calculate</h2>
