--- a/Stalker/Stalker.html
+++ b/Stalker/Stalker.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
    <script src="stalker.js"></script>
-    <title>Stalker Exercise</title>
+    <title>StaLker Exercise</title>
 </head>
 <body>
     <h1>JS Stalker Exercise</h1>
