Update Tic Tac Toe.html

--- a/TTT Board/Tic Tac Toe.html
+++ b/TTT Board/Tic Tac Toe.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="board.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <h1>Tic . Tac . Toe</h1>
 <table>
 <tr>
     <td id="le" class="he"></td>
